Correct contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -69,7 +69,7 @@ header nav a {
     top: 110px;
     left: 150px;
     background-color: var(--accent2-color);
-    opacity: 0.6;
+    opacity: 0.7;
     color: #FFFFFF;
 
     padding: 1rem;
